@@ -1,3 +1,5 @@
+- prevent drakxtools-backend to require Glib::Object::Introspection (mga#11842)
+
 Version 16.7 - 5 December 2013
 
 - diskdrake:
